--- a/project.html
+++ b/project.html
@@ -3,10 +3,9 @@
         <title> Time Table</title>
         <body>
         <select>
-            <option value=option 1></option>
-            <option value=option 2></option>
-            <option value=option 3></option>
-            <option value=option 4></option>
+            <option value=1></option>
+            <option value=2></option>
+            <option value=3></option>
             <input type="button" name="sub" value="submit">
         </select>
         </body>
